--- a/index.html
+++ b/index.html
@@ -1,58 +1,5 @@
 <html lang="en">
     <head>
-        <link href="/assets/css/main.css" rel="stylesheet" type="text/css" media="all">
-        <meta charset = "utf-8">
-        <meta name = "viewport" content = "width=device-width, initial-scale=1">
-        <title>Home</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link href="https://techytrickster.neocities.org/favicon.ico" rel="favicon">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-        <script src="https://cdn.rawgit.com/showdownjs/showdown/2.1.0/dist/showdown.min.js"></script>
-        <script src="https://techytrickster.neocities.org/load-markdown-document.js"></script>
+        <meta http-equiv="refresh" content="0; url=/pages/home_page.html"/>
     </head>
-
-    <body class = "vh-100"  onload = "getMarkDownPage('https://techytrickster.neocities.org/landing-page.md', 'article')">
-        <div id = "header" class="container headline border border-2 rounded-bottom-4 item mb-4">
-            <h1>A Techy Domain</h1>
-        </div>
-
-        <div id = "main" class = "container">
-            <div class = "row">
-                <div id = "side-bar" class = "col-3">
-                    <div id="site-directory" class="col container border border-2 rounded-start-4 directory-box mb-3">
-                        <ul>
-                            <li><button type = "button" class = "btn btn-link">Home</button></li>
-                            <li><button type = "button" class = "btn btn-link">Contact Me</button></li>
-                            <li><button type = "button" class = "btn btn-link">About Me</button></li>
-                            <li><button type = "button" class = "btn btn-link">Projects</button></li>
-                            <li><button type = "button" class = "btn btn-link">Writing</button></li>
-                        </ul>
-                        
-                    </div>                    
-
-                    <div id = "lower-logo" class = "logo-box container border border-2 rounded-start-4 border">
-                        stuff
-                    </div>
-                </div>
-
-                <div class = "col article-box border border-2">
-                    <div id="article" class = "overflow-auto">
-                        example Text
-                    </div>
-                </div>
-
-                <div class = "col-3 boarder">
-                    <div id = "site-updates" class = "container border border-2 rounded-end-4 site-update-box mb-3">
-                        updates
-                    </div>
-                </div>
-            </div>            
-        </div>
-
-        <div id="footer" class = "d-flex footer-box container border border-2 rounded-top-3 mb-4 mt-3">
-            contact me
-            <br>
-            techytrickster@gmail.com
-        </div>
-    </body>
 </html>
