changes 1.  updated site header to include a link back to the home page 2. fixed the topic directory page to get the category filtering to work!

--- a/pages/home_page.html
+++ b/pages/home_page.html
@@ -29,8 +29,8 @@
     </script>
 
     <body class = "container vh-100"  onload = "loadSiteData()">
-        <div id = "header" class="container shadow-lg headline rounded-bottom-4 item mb-4">
-            <h1>A Techy Domain</h1>
+        <div id = "header" class="container shadow-lg headline rounded-bottom-4 item mb-4 pt-3">
+            <h1><a href = "/pages/home_page.html">A Techy Domain</a></h1>
         </div>
 
         <div id = "main" class = "container">
