--- a/pages/top_directory.html
+++ b/pages/top_directory.html
@@ -27,7 +27,7 @@
             <h1><a href = "/pages/home_page.html">A Techy Domain</a></h1>
         </div>
 
-        <div id = "main" class = "container rounded-4" style = "background-color: orange;">
+        <div id = "main" class = "container shadow-lg rounded-4" style = "background-color: orange;">
             <div class = "row justify-content-evenly">
                 <div id = "coding-info" class = "col-3 container shadow-lg p-3 m-3 rounded-4" style="background-color: antiquewhite;">
                     Coding
