--- a/pages/topic_directory.html
+++ b/pages/topic_directory.html
@@ -2,8 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name = "viewport" content = "width=device-width, initial-scale=1">
-    <title>React Examples</title>
+    <meta name = "viewport" content = "width=device-width, initial-scale=1">    
     <title>Project Categories</title>
     <link href="/assets/css/main.css" rel="stylesheet" type="text/css" media="all">        
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -11,7 +10,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.rawgit.com/showdownjs/showdown/2.1.0/dist/showdown.min.js"></script>
     <script src="/assets/javascript/load-markdown-document.js"></script>
-    <script src="/assets/javascript/populate-content-overview.js"></script>
     <script src="/assets/javascript/map-query-to-file.js"></script>
 
     <script src="https://unpkg.com/react@15.4.2/dist/react.js"></script>
@@ -19,23 +17,50 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.29/browser.js"></script>
   </head>
 
-  <body>
-    <div id = "header" class="container shadow-lg headline rounded-bottom-4 item mb-4 pt-3">
-        <h1><a href = "/pages/home_page.html">A Techy Domain</a></h1>
-    </div>
-
-    <div id = "main" class = "container rounded-4 p-2" style = "background-color: orange;"></div>        
+  <body>    
+    <div id = "main" className = "container"></div>        
 
     <script type="text/babel">        
         var params = new URL(document.URL).searchParams
         var pageCategory = params.get("category")        
         var infoURI = mapQueryWithContent(pageCategory)
-        document.title = pageCategory                          
+        document.title = pageCategory
         console.log(pageCategory)
         console.log(infoURI)
 
+        const navData = [
+            {'display': 'Coding', 'category': 'coding'},
+            {'display': '3D Printing', 'category': '3d-printing'},
+            {'display': 'Games', 'category': 'games'},
+            {'display': 'Writing', 'category': 'writing'},
+            {'display': 'Art', 'category': 'art'},
+            {'display': 'Personal Blog', 'category': 'blog'},
+        ]
+
+        const TheHeader = () =>
+            <div id = "header" className = "container shadow-lg headline rounded-bottom-4 item mb-4 pt-3">
+                <h1><a href = "/pages/home_page.html">A Techy Domain</a></h1>
+            </div>
+
+        const TheFooter = () =>
+            <div id="footer" className = "d-flex footer-box container shadow-lg rounded-top-3 mb-4 mt-3 p-2">
+                © TechyTrickster 2025 • Coded With Passion
+            </div>
+
+        const NavElement = ({display, category}) =>
+            <div className = "container col shadow-lg rounded-4 m-2 p-3" style = {{backgroundColor: "antiquewhite"}}>
+                <a href = {"/pages/topic_directory.html?category=" + encodeURIComponent(category)}>{display}</a>
+            </div>
+
+        const NavBanner = ({navElements}) =>
+            <div id = "navigation" className = "container row shadow-lg rounded-4 m-4 p-1" style = {{backgroundColor: "orange"}}>
+                {navElements.map((element, i) => 
+                    <NavElement key = {i} {...element}/>
+            )}
+            </div>
+
         // A stateless functional component for an individual Recipe
-        const ArticleEntry = ({title, summary, created_on, last_modified, author, category, link, tags, hero_image, path}) =>
+        const ArticleEntry = ({title, summary, created_on, last_modified, author, category, link, tags, hero_image, path}) =>            
             <div className = "container row rounded-3 m-2" style = {{backgroundColor: "antiquewhite"}}>
                 <img src = {hero_image} className = "col-5 container rounded-3 p-3"></img>
                 <div className = "container col p-3">
@@ -47,11 +72,19 @@
                     <span>materials link: {link}    </span>                                        
                     <p>{summary}</p>    
                 </div>
+            </div>            
+
+        const CustomPage = ({navData, pageInfo, articleList}) =>
+            <div id = "page" className = "container">
+                <TheHeader className = "container"/>
+                <NavBanner className = "container" navElements = {navData}/>
+                <Listing className = "container" info = {pageInfo} articles = {articleList}/>
+                <TheFooter/>
             </div>
         
         // A stateless functional component for the Menu of Recipes
         const Listing = ({info, articles}) =>
-            <div className = "container">
+            <div className = "container rounded-3 m-3 p-3" style = {{backgroundColor: "orange"}}>
                 <div id = "info" className = "container row rounded-4 p-3 m-2" style = {{backgroundColor: "antiquewhite"}} dangerouslySetInnerHTML={{__html: info}}></div>
                 <div className = "ArticleEntries">
                     {articles.filter((contentPiece, i) => ("category" in contentPiece) && (contentPiece.category != null) && (contentPiece.category.toLocaleLowerCase() == pageCategory.toLocaleLowerCase())).map((contentPiece, i) => 
@@ -74,7 +107,7 @@
                         // A call to ReactDOM.render to render our Menu into the current DOM
                         console.log(jsonData)
                         ReactDOM.render(
-                            <Listing info = {info} articles = {jsonData}/>,
+                            <CustomPage className = "container" navData = {navData} pageInfo = {info} articleList = {jsonData}/>,
                             document.getElementById("main")
                         )
                     })
