removed .html file extension in urls as this seems to cause caching issues with either firefox or neocities servers.

--- a/pages/content.html
+++ b/pages/content.html
@@ -23,7 +23,7 @@
 
     <body onload = "loadPageContent()">
         <div id = "header" class="container shadow-lg headline rounded-bottom-4 item mb-4 pt-3">
-            <h1><a href = "/pages/home_page.html">A Techy Domain</a></h1>
+            <h1><a href = "/pages/home_page">A Techy Domain</a></h1>
         </div>
 
         <div id = "main" class = "container rounded-4 p-3" style = "background-color: orange;">
