--- a/pages/home_page.html
+++ b/pages/home_page.html
@@ -30,7 +30,7 @@
 
     <body class = "container vh-100"  onload = "loadSiteData()">
         <div id = "header" class="container shadow-lg headline rounded-bottom-4 item mb-4 pt-3">
-            <h1><a href = "/pages/home_page.html">A Techy Domain</a></h1>
+            <h1><a href = "/pages/home_page">A Techy Domain</a></h1>
         </div>
 
         <div id = "main" class = "container">
@@ -42,7 +42,7 @@
                             <li><button type = "button" class = "btn btn-warning mt-2 text-nowrap" onclick="getMarkDownPage('/content/main/contact.md', 'article')">Contact Me</button></li>
                             <li><button type = "button" class = "btn btn-warning mt-2 text-nowrap" onclick="getMarkDownPage('/content/main/about-me.md', 'article')">About Me</button></li>
                             <li><button type = "button" class = "btn btn-warning mt-2 text-nowrap" onclick="getMarkDownPage('/content/main/credits.md', 'article')">Credits</button></li>
-                            <li><a class = "btn btn-warning mt-2 text-nowrap" href = "/pages/top_directory.html">Projects</a></li>                            
+                            <li><a class = "btn btn-warning mt-2 text-nowrap" href = "/pages/top_directory">Projects</a></li>                            
                         </ul>
                         
                     </div>                    
