--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html lang="en">
     <head>
-        <meta http-equiv="refresh" content="0; url=/pages/home_page.html"/>
+        <meta http-equiv="refresh" content="0; url=/pages/home_page"/>
     </head>
 </html>
