updated page to interpret the link meta data contents as an actual clickable link

--- a/pages/topic_directory.html
+++ b/pages/topic_directory.html
@@ -69,7 +69,7 @@
                     <span>modified on: {last_modified}   </span>
                     <br/>
                     <span>by {author}   </span>
-                    <span>materials link: {link}    </span>                                        
+                    <span>materials link: <a href = {link}>link</a></span>                                        
                     <p>{summary}</p>    
                 </div>
             </div>            
