fixed the updates and article boxes so that they don't take up limitless space

--- a/pages/home_page.html
+++ b/pages/home_page.html
@@ -52,14 +52,14 @@
                     </div>
                 </div>
 
-                <div class = "col article-box shadow-lg mb-4 overflow-auto pt-2">
+                <div class = "col article-box shadow-lg mb-4 overflow-auto pt-2" style = "height: fit-content;">
                     <div id="article">
                         example Text
                     </div>
                 </div>
 
                 <div class = "col-3 boarder">
-                    <div id = "site-updates" class = "container shadow-lg rounded-end-4 site-update-box pt-3 pb-2">
+                    <div id = "site-updates" class = "overflow-auto container shadow-lg rounded-end-4 site-update-box pt-3 pb-2" style = "max-height: 75vh">
                         updates
                     </div>
                 </div>
