changes. 1. added markdown preprocessor to handle template value replacement. 2. added replacement code to handle mysterious remaining header indicators 3. fixed code path issue preventing title setting (this introduced new bug where [object Object] is not added at the top of all topic directories)

--- a/pages/topic_directory.html
+++ b/pages/topic_directory.html
@@ -97,7 +97,7 @@
         fetch(headerMarkDownRequest)
             .then((response) => response.text()) //load header data
             .then((text) => {
-                var metaData, info = markDownFullDecode(text)
+                var [metaData, info] = markDownFullDecode(text)
                 var digestRequest = new Request("/content.json")
                 console.log("created digest request")
 
